fix(combobox): prevent collapse to 1px in flex align-items:center containers
fix: move min width floor to form control level

- remove redundant test
- update proposal
- move min-width floor

--- a/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
+++ b/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
@@ -18,7 +18,6 @@ $cb-skeleton-light: rgba(194, 194, 194, 0.2);
 $cb-skeleton-dark: #d2d2d2;
 
 .widget-combobox {
-    min-width: 0;
     flex-grow: 1;
     position: relative;
     transition: color 150ms ease 0s;
@@ -141,6 +140,7 @@ $cb-skeleton-dark: #d2d2d2;
 
     .widget-combobox-input-container {
         flex-grow: 1;
+        min-width: 15ch; // overrides Atlas .form-control 50px floor; prevents collapse in column flex containers
         transition: box-shadow 150ms ease 0s;
 
         &-disabled {
